8149543: range check CastII nodes should not be split through Phi

Splitting range check CastIIs through loop induction Phi prevents further optimizations

Reviewed-by: kvn, mcberg